--- a/Research_on_water_status_Chapters/Airside_Waterflow_figure_1.tex
+++ b/Research_on_water_status_Chapters/Airside_Waterflow_figure_1.tex
@@ -1,6 +1,6 @@
 \begin{figure}[ht]
 	\centering
-	\subfloat[\label{fig:airside_waterflow_120A_ratio}]{
+	\subfloat[\label{fig:figure4a}]{
 		\begin{tikzpicture}[scale=0.6]
 		
 			\begin{axis}[
@@ -30,7 +30,7 @@
 			\end{axis}
 		\end{tikzpicture}
 	}
-	\subfloat[\label{fig:airside_waterflow_210A_ratio}]{
+	\subfloat[\label{fig:figure4b}]{
 		\begin{tikzpicture}[scale=0.6]
 		
 			\begin{axis}[        
@@ -57,7 +57,7 @@
 		\end{tikzpicture}
 	}
 	\\
-	\subfloat[\label{fig:airside_waterflow_300A_ratio}]{
+	\subfloat[\label{fig:figure4c}]{
 		\begin{tikzpicture}[scale=0.6]
 			\centering
 			
