--- a/Research_on_water_status_Chapters/Chapter1_Introduction.tex
+++ b/Research_on_water_status_Chapters/Chapter1_Introduction.tex
@@ -43,13 +43,13 @@ The pressure drop between the inlet and outlet of the fuel cell is mainly caused
 % 燃料电池入口和出口之间的压降主要是由流动介质与 cel\cite{wuDiagnosticToolsPEM2008}内部流道之间的摩擦引起的。两端之间的压降随着液态水含量的增加而增大，因此压降可以很好地反映烟囱内水淹的程度。指标包括：压降、压降残余、压降频率、两相流乘数系数等，通过定性分析、统计分析、人工智能分析等，通过上述指标进行诊断。引用{liNovelApproachDetermine2017}
 \par
 \begin{figure}[h]
-    \centering
-    
-    \includegraphics{Research_pictures/Fig1.jpg}
-    % \includesvg{Research_pictures/1.svg}
-    % \includegraphics{Research_pictures/1.svg}
-    \caption[short]{The change of cathode and anode voltage drop with time during flooding process}
-    \label{fig:figure1}
+	\centering
+
+	\includegraphics{Research_pictures/Fig1.jpg}
+	% \includesvg{Research_pictures/1.svg}
+	% \includegraphics{Research_pictures/1.svg}
+	\caption[short]{The change of cathode and anode voltage drop with time during flooding process}
+	\label{fig:figure1}
 \end{figure}
 The detection methods based on electrochemical signals mainly include electrochemical impedance spectroscopy, current interruption method, and cyclic voltammetry, etc. Among them, electrochemical impedance spectroscopy is the most common hydration state detection method because it can distinguish different electrochemical processes and can be tested online \cite{yousfisteinerDiagnosisPolymerElectrolyte2011,chenOperationCharacteristicsCarbon2015}. The figure \ref{fig:figure1} shows the difference in fuel cell impedance spectra under different air humidity conditions. As the air humidity decreases, the value of the high-frequency impedance segment (i.e., the intercept of the impedance spectrum with the real axis) gradually increases, the impedance spectrum moves to the right, and the radius of the low-frequency arc segment also gradually increases \cite{hussainiVisualizationQuantificationCathode2009}, which can be used as an indicator of the hydration state of the fuel cell.
 % 基于电化学信号的检测方法主要有电化学阻抗谱、电流中断法、循环伏安法等。其中，电化学阻抗谱是最常见的水化状态检测方法，因为它可以区分不同的电化学过程，并且可以在线测试\ 引用{yousfisteinerDiagnosisPolymerElectrolyte2011，chenOperationCharacteristicsCarbon2015}。图\ref{fig:figure1}显示了不同空气湿度条件下燃料电池阻抗谱的差异。随着空气湿度的降低，高频阻抗段的值（即阻抗谱与实轴的截距）逐渐增大，阻抗谱向右移动，低频圆弧段的半径增大 也逐渐增加\cite{hussainiVisualizationQuantificationCathode2009}，可以作为燃料电池水合状态的指标。
@@ -57,15 +57,29 @@ The detection methods based on electrochemical signals mainly include electroche
 When analyzing the relationship between impedance spectra and the internal hydration state of fuel cells, equivalent circuit models are often introduced. The model generally includes resistors, capacitors, inductors, and Warburg elements\cite{tangRecentProgressUse2020}. The model is capable of quantitatively analyzing the electrochemical process.  The key to this method is the establishment of equivalent models and parameter identification. Fouquet et al.[25] extended the standard capacitor to a constant phase element, proving that the three resistance values of the model are related to the relative humidity of the air supply. Zhang et al.[26] used a neural network method to complete parameter identification, and the predicted Nyquist plot almost completely coincides with the measured value, and by directly predicting the parameters of the equivalent circuit, they detailed the degree of influence of different processes on fuel cell performance. BMW proposed a method for online monitoring of impedance, which requires collecting five frequency points, divided into three groups to fit the Randles circuit, obtaining ohmic impedance, polarization resistance and double layer capacitance\cite{fouquetModelBasedPEM2006}.
 % 在分析阻抗谱与燃料电池内部水合状态之间的关系时，常常引入等效电路模型。该模型通常包括电阻器、电容器、电感器和 Warburg 元件\cite{tangRecentProgressUse2020}。该模型能够定量分析电化学过程。该方法的关键是等效模型的建立和参数辨识。Fouquet 等人 [25] 将标准电容器扩展为恒相位元件，证明模型的三个电阻值与送风相对湿度有关。张等 [26] 他们利用神经网络方法完成参数辨识，预测的奈奎斯特图与测量值几乎完全吻合，并通过直接预测等效电路的参数，详细说明了不同工艺对燃料电池性能的影响程度。BMW 提出了一种在线监测阻抗的方法，需要采集 5 个频点，分成 3 组来拟合 Randles 电路，得到欧姆阻抗、极化电阻和双层电容\cite{fouquetModelBasedPEM2006}。
 \par
-However, the above methods are mostly suitable for single cells or low-power fuel cells. Applying them to high-power fuel cell doesn't gain any noticeable improvements\cite{tangRecentProgressUse2020,jiangMicrobialFuelCell2018,dotelliCombiningElectricalPressure2016,millerReviewPolymerElectrolyte2011,nagulapatiMachineLearningBased2023}, since the assembly structure, flow field structure, and operating conditions of high-power fuel cell stacks are significantly different from those of single cells and low-power stacks \cite{verhaertWaterManagementAlkaline2011}. 
+However, the above methods are mostly suitable for single cells or low-power fuel cells. Applying them to high-power fuel cell doesn't gain any noticeable improvements\cite{tangRecentProgressUse2020,jiangMicrobialFuelCell2018,dotelliCombiningElectricalPressure2016,millerReviewPolymerElectrolyte2011,nagulapatiMachineLearningBased2023}, since the assembly structure, flow field structure, and operating conditions of high-power fuel cell stacks are significantly different from those of single cells and low-power stacks \cite{verhaertWaterManagementAlkaline2011}.
+% 然而，上述方法大多适用于单电池或小功率燃料电池。将它们应用于高功率燃料电池并没有获得任何明显的改进\cite{tangRecentProgressUse2020, JiangMicrobialFuelCell2018,dotelliCombiningElectricalPressure2016,,nagulapatiMachineLearningBased2023}，因为高功率燃料电池堆的装配结构、流场结构和运行条件显着 与单电池和低功率电堆不同。因此，大功率燃料电池系统水合状态的检测还处于比较空白阶段。
+\par
+Furthermore, research has indicated that smaller-scale fuel cell stacks exhibit reduced sensitivity to gas flow rates\cite{bonnetDesign80kWePEM2008}, which can also cause the difference between small and big stacks.
+% 小尺寸电堆对于气体流量更不敏感
+
 % TODO 这里需要添加一些参考文献
 Therefore, the detection of the hydration state of high-power fuel cell systems is still in a relatively blank stage.
-% 然而，上述方法大多适用于单电池或小功率燃料电池。将它们应用于高功率燃料电池并没有获得任何明显的改进\cite{tangRecentProgressUse2020, JiangMicrobialFuelCell2018,dotelliCombiningElectricalPressure2016,millerReviewPolymerElectrolyte2011,nagulapatiMachineLearningBased2023}，因为高功率燃料电池堆的装配结构、流场结构和运行条件显着 与单电池和低功率电堆不同。因此，大功率燃料电池系统水合状态的检测还处于比较空白阶段。
+
+
 \par
-% 小尺寸电堆对于气体流量更不敏感
+Additionally, the variation in the number of cells within a fuel cell stack can significantly influence the power generation performance, leading to temperature imbalances\cite{millerReviewPolymerElectrolyte2011}. This, in turn, further exacerbates the uneven distribution of water present throughout the stack. Consequently, there exists a pronounced distinction between smaller and larger stacks regarding these phenomena.
 % 电堆中 Cell 数量的多寡会影响性能，也会导致温度不均衡，进而导致水存量的不均衡
+Researches indicates that there may exist notable differences in the water generation mechanisms between large-scale and small-scale polymer electrolyte membrane fuel cell (PEMFC) stacks\cite{jiReviewWaterManagement2009}. Therefore, traditional approaches relying on electrochemical analysis and similar techniques may not be applicable to large-scale stacks. Due to the fact that large-scale fuel cell stacks frequently operate at lower power densities\cite{shojayianSimulationCathodeCatalyst2024}, this could potentially have an impact on the water generation mechanisms involved, further differentiating them from their smaller-scale counterparts.
 % 解释了 PEMFC 中水管理问题，提及了大型电堆可能与小型电堆的水生成机理有区别
+
 % 大型电堆通常在低功率密度下工作，这可能会对水生成带来一定的影响 [4]
 \par
-Consequently, this study aims to investigate the hydration state of high-power fuel cell systems, construct, and validate a water balance model. Initially, the water balance model of the high-power fuel cell system is scrutinized, and a condensation-type exhaust water collection device is established to compute the water flow rate emanating from the fuel cell system. To authenticate the constructed water balance model, controlled variable experiments are executed under varying working temperatures, air metering ratios, and load currents. The experimental outcomes indicate that as the working temperature and air metering ratio escalate, the water flow rate emanating from the air side incrementally increases, and the water flow rate from the hydrogen side gradually diminishes. As the load current amplifies, the water flow rate emanating from both sides augments. Ultimately, predicated on the experimental data, the change rate of the internal water content of the fuel cell system under diverse conditions is calculated. The results reveal that under the same load current, as the working temperature and the air stoichiometric ratio augment, the change rate of the internal water content of the fuel cell system progressively decreases. Conversely, as the load current intensifies, the impact of the air stoichiometric ratio also incrementally escalates. Therefore, at low power, it is essential to maintain an appropriate working temperature, while at high power, upholding an appropriate metering ratio is of greater significance.
+Consequently, this study aims to investigate the hydration state of high-power fuel cell systems, construct, and validate a water balance model. Initially, the water balance model of the high-power fuel cell system is scrutinized, and a condensation-type exhaust water collection device is established to compute the water flow rate emanating from the fuel cell system.
+To authenticate the constructed water balance model, controlled variable experiments are executed under varying working temperatures, air metering ratios, and load currents. The experimental outcomes indicate that as the working temperature and air metering ratio escalate, the water flow rate emanating from the air side incrementally increases, and the water flow rate from the hydrogen side gradually diminishes.
+As the load current amplifies, the water flow rate emanating from both sides augments. Ultimately, predicated on the experimental data, the change rate of the internal water content of the fuel cell system under diverse conditions is calculated. The results reveal that under the same load current, as the working temperature and the air stoichiometric ratio augment, the change rate of the internal water content of the fuel cell system progressively decreases.
+Conversely, as the load current intensifies, the impact of the air stoichiometric ratio also incrementally escalates. Therefore, at low power, it is essential to maintain an appropriate working temperature, while at high power, upholding an appropriate metering ratio is of greater significance.
+
 % 因此，本研究旨在研究高功率燃料电池系统的水合状态，构建并验证水平衡模型。首先，仔细研究了大功率燃料电池系统的水平衡模型，并建立了冷凝式废水收集装置来计算从燃料电池系统排出的水流量。为了验证所构建的水平衡模型，在不同的工作温度、空气计量比和负载电流下进行了受控变量实验。实验结果表明，随着工作温度和空气计量比的升高，空气侧出水流量逐渐增大，氢气侧出水流量逐渐减小。随着负载电流的增大，从两侧流出的水流量增大。最终根据实验数据计算出不同条件下燃料电池系统内部含水量的变化率。结果表明，在相同负载电流下，随着工作温度和空气化学计量比的增大，燃料电池系统内部含水量的变化率逐渐减小。相反，随着负载电流的增强，空气化学计量比的影响也逐渐增大。因此，在低功率时，保持适当的工作温度至关重要，而在高功率时，保持适当的计量比则更为重要。
+\par
+Based on the experiment results, we propose the following viewpoint: The water generation and water balance models for large-scale fuel cell stacks differ mechanistically from those of smaller-scale models and cannot be considered as linear scalings of the smaller models. The internal states of large-scale fuel cell stacks exceed the complexity of small-scale stacks due to their increased scale. Consequently, traditional approaches based on small-scale stacks may not be entirely applicable to large-scale stacks.
