--- a/Research_on_water_status_Chapters/Airside_Waterflow_figure_grouped_by_temperature.tex
+++ b/Research_on_water_status_Chapters/Airside_Waterflow_figure_grouped_by_temperature.tex
@@ -1,7 +1,7 @@
 \begin{figure}[ht]
 	
 	\centering
-	\subfloat[\label{fig:airside_waterflow_120A_ratio_group}]{
+	\subfloat[\label{fig:figure6a}]{
 		\begin{tikzpicture}[scale=0.6]
 		
 			\begin{axis}[
@@ -9,7 +9,7 @@
 					xlabel={Airflow Ratio},
 					ylabel={Airside Water Flow/$g \cdot s^{-1}$},
 					xmin=1.8, xmax=3,
-					ymin=2.5, ymax=7,
+					ymin=2.5, ymax=5.5,
 					ytick distance = 0.5,
 					xtick distance = 0.2,
 					legend pos=north west,
@@ -30,63 +30,67 @@
 			\end{axis}
 		\end{tikzpicture}
 	}
-	
-	\begin{tikzpicture}[scale=0.6]
+	\subfloat[\label{fig:figure6b}]{
+		\begin{tikzpicture}[scale=0.6]
 		
-		\begin{axis}[
-				title={Airside waterflow at 210A load current},
-				xlabel={Airflow Ratio},
-				ylabel={Airside Water Flow/$g \cdot s^{-1}$},
-				xmin=1.7, xmax=2.5,
-				ymin=4, ymax=9,
-				ytick distance = 0.5,
-				xtick distance = 0.1,
-				legend pos=north west,
-				ymajorgrids=true,
-				grid style=dashed,
-				legend style={font=\small}
-			]
-			\addplot table [x=ratio, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{temperature}}{55:55}] {Research_on_water_status_data/airside_waterflow_210A_in_temperature.csv};
-			\addlegendentry{Temperature 55}
-			\addplot table [x=ratio, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{temperature}}{60:60}] {Research_on_water_status_data/airside_waterflow_210A_in_temperature.csv};
-			\addlegendentry{Temperature 60}
-			\addplot table [x=ratio, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{temperature}}{65:65}] {Research_on_water_status_data/airside_waterflow_210A_in_temperature.csv};
-			\addlegendentry{Temperature 65}
-			\addplot table [x=ratio, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{temperature}}{70:70}] {Research_on_water_status_data/airside_waterflow_210A_in_temperature.csv};
-			\addlegendentry{temperature 70}
-			\addplot table [x=ratio, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{temperature}}{73:73}] {Research_on_water_status_data/airside_waterflow_210A_in_temperature.csv};
-			\addlegendentry{Temperature 73}
-		\end{axis}
-		\label{fig:airside_waterflow_210A_ratio}
-	\end{tikzpicture}
-	\begin{tikzpicture}[scale=0.6]
+			\begin{axis}[
+					title={Airside waterflow at 210A load current},
+					xlabel={Airflow Ratio},
+					ylabel={Airside Water Flow/$g \cdot s^{-1}$},
+					xmin=1.7, xmax=2.5,
+					ymin=4, ymax=8,
+					ytick distance = 0.5,
+					xtick distance = 0.1,
+					legend pos=north west,
+					ymajorgrids=true,
+					grid style=dashed,
+					legend style={font=\small}
+				]
+				\addplot table [x=ratio, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{temperature}}{55:55}] {Research_on_water_status_data/airside_waterflow_210A_in_temperature.csv};
+				\addlegendentry{Temperature 55}
+				\addplot table [x=ratio, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{temperature}}{60:60}] {Research_on_water_status_data/airside_waterflow_210A_in_temperature.csv};
+				\addlegendentry{Temperature 60}
+				\addplot table [x=ratio, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{temperature}}{65:65}] {Research_on_water_status_data/airside_waterflow_210A_in_temperature.csv};
+				\addlegendentry{Temperature 65}
+				\addplot table [x=ratio, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{temperature}}{70:70}] {Research_on_water_status_data/airside_waterflow_210A_in_temperature.csv};
+				\addlegendentry{temperature 70}
+				\addplot table [x=ratio, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{temperature}}{73:73}] {Research_on_water_status_data/airside_waterflow_210A_in_temperature.csv};
+				\addlegendentry{Temperature 73}
+			\end{axis}
+			
+		\end{tikzpicture}
+	}
+	\\
+	\subfloat[\label{fig:figure6c}]{
+		\begin{tikzpicture}[scale=0.6]
 		
-		\begin{axis}[
-				title={Airside waterflow at 300A load current},
-				xlabel={Airflow Ratio},
-				ylabel={Airside Water Flow/$g \cdot s^{-1}$},
-				xmin=1.7, xmax=2.5,
-				ymin=7, ymax=10.5,
-				ytick distance = 0.5,
-				xtick distance = 0.1,
-				legend pos=north west,
-				ymajorgrids=true,
-				grid style=dashed,
-				legend style={font=\small}
-			]
-			\addplot table [x=ratio, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{temperature}}{63:63}] {Research_on_water_status_data/airside_waterflow_300A_in_temperature.csv};
-			\addlegendentry{Temperature 63}
-			\addplot table [x=ratio, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{temperature}}{65:65}] {Research_on_water_status_data/airside_waterflow_300A_in_temperature.csv};
-			\addlegendentry{Temperature 65}
-			\addplot table [x=ratio, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{temperature}}{68:68}] {Research_on_water_status_data/airside_waterflow_300A_in_temperature.csv};
-			\addlegendentry{Temperature 68}
-			\addplot table [x=ratio, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{temperature}}{70:70}] {Research_on_water_status_data/airside_waterflow_300A_in_temperature.csv};
-			\addlegendentry{temperature 70}
-			\addplot table [x=ratio, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{temperature}}{73:73}] {Research_on_water_status_data/airside_waterflow_300A_in_temperature.csv};
-			\addlegendentry{Temperature 73}
-		\end{axis}
-		\label{fig:airside_waterflow_300A_ratio}
-	\end{tikzpicture}
+			\begin{axis}[
+					title={Airside waterflow at 300A load current},
+					xlabel={Airflow Ratio},
+					ylabel={Airside Water Flow/$g \cdot s^{-1}$},
+					xmin=1.7, xmax=2.5,
+					ymin=7, ymax=10.5,
+					ytick distance = 0.5,
+					xtick distance = 0.1,
+					legend pos=north west,
+					ymajorgrids=true,
+					grid style=dashed,
+					legend style={font=\small}
+				]
+				\addplot table [x=ratio, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{temperature}}{63:63}] {Research_on_water_status_data/airside_waterflow_300A_in_temperature.csv};
+				\addlegendentry{Temperature 63}
+				\addplot table [x=ratio, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{temperature}}{65:65}] {Research_on_water_status_data/airside_waterflow_300A_in_temperature.csv};
+				\addlegendentry{Temperature 65}
+				\addplot table [x=ratio, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{temperature}}{68:68}] {Research_on_water_status_data/airside_waterflow_300A_in_temperature.csv};
+				\addlegendentry{Temperature 68}
+				\addplot table [x=ratio, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{temperature}}{70:70}] {Research_on_water_status_data/airside_waterflow_300A_in_temperature.csv};
+				\addlegendentry{temperature 70}
+				\addplot table [x=ratio, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{temperature}}{73:73}] {Research_on_water_status_data/airside_waterflow_300A_in_temperature.csv};
+				\addlegendentry{Temperature 73}
+			\end{axis}
+			
+		\end{tikzpicture}
+	}
 	\caption{Comparison of water flow rate flowing out of the air side under different air metering ratios (a:120A; b:210A; c:300A; vertical as water flow; horizontal as air flow rate; starting point from top to bottom is ordered by temperature: 63/65/68/70/73℃)}
 	\label{figure6}
 \end{figure}
