--- a/Research_on_water_status_Chapters/Chapter2_Experiment.tex
+++ b/Research_on_water_status_Chapters/Chapter2_Experiment.tex
@@ -2,12 +2,12 @@
 To verify the reliability of the water balance model for high-power fuel cell systems, it is necessary to record the water-containing state of the high-power fuel cell system when it reaches water balance under different operating conditions. Therefore, the experimental conditions should meet the following three points:
 % 为了验证高功率燃料电池系统水平衡模型的可靠性，需要记录高功率燃料电池系统在不同工况下达到水平衡时的含水状态。 因此，实验条件应满足以下三点：
 \begin{itemize}
-\item The selected operating parameters should be within the normal operating range of the fuel cell system to avoid other faults in the fuel cell system other than water content faults (such as insufficient supply of reaction gas, air compressor surge, proportional valve failure, etc.)
-% 所选运行参数应在燃料电池系统正常运行范围内，避免燃料电池系统出现含水故障以外的其他故障（如反应气体供应不足、空压机喘振、比例阀故障等）。
-\item In order to study the phenomena when the fuel cell system has a water content fault, the designed experiment needs to reflect more obvious phenomena under dry and flooded conditions
-% 为了研究燃料电池系统出现含水故障时的现象，设计的实验需要反映干燥和淹水条件下更明显的现象
-\item The steady-state operation time should be long enough to ensure that the water content inside the fuel cell is in dynamic balance during this period, avoiding the impact of dynamic characteristics on the experimental results.
-% 稳态运行时间应足够长，以保证在此期间燃料电池内部的含水量处于动态平衡，避免动态特性对实验结果的影响。
+	\item The selected operating parameters should be within the normal operating range of the fuel cell system to avoid other faults in the fuel cell system other than water content faults (such as insufficient supply of reaction gas, air compressor surge, proportional valve failure, etc.)
+	      % 所选运行参数应在燃料电池系统正常运行范围内，避免燃料电池系统出现含水故障以外的其他故障（如反应气体供应不足、空压机喘振、比例阀故障等）。
+	\item In order to study the phenomena when the fuel cell system has a water content fault, the designed experiment needs to reflect more obvious phenomena under dry and flooded conditions
+	      % 为了研究燃料电池系统出现含水故障时的现象，设计的实验需要反映干燥和淹水条件下更明显的现象
+	\item The steady-state operation time should be long enough to ensure that the water content inside the fuel cell is in dynamic balance during this period, avoiding the impact of dynamic characteristics on the experimental results.
+	      % 稳态运行时间应足够长，以保证在此期间燃料电池内部的含水量处于动态平衡，避免动态特性对实验结果的影响。
 \end{itemize}
 % 为了验证高功率燃料电池系统水平衡模型的可靠性，需要记录高功率燃料电池系统在不同工况下达到水平衡时的含水状态。因此，实验条件应满足以下三点：（1）：所选运行参数应在燃料电池系统正常运行范围内，避免燃料电池系统出现除含水量故障外的其他故障（如含水量不足）。反应气体供应、空压机喘振、比例阀故障等），（2）为了研究燃料电池系统出现含水故障时的现象，设计的实验需要反映干燥和浸水下更明显的现象 (3) 稳态运行时间应足够长，以保证在此期间燃料电池内部的含水量处于动态平衡，避免动态特性对实验结果的影响。
 \subsection{Experiment Design}
@@ -15,21 +15,21 @@ The literature indicates factors with greatest impact on water content inside fu
 % 文献表明，对燃料电池内部含水量影响最大的因素是空气计量比、工作温度和负载电流\cite{legrosFirstResultsPEMFC2011}。由于运行时无法测量电堆内部温度，因此本文采用冷却剂入口温度作为工作温度，下文中的工作温度均指冷却剂入口温度。根据系统方推荐的运行工况，设计了三因素五级含水量实验。实验的参数显示在\ref{tab:WaterStateExperimentalParameterTable}中。
 \begin{table}
 	\centering
-	
+
 	\begin{center}
 		\caption{Water state experimental parameter table}
-		\label{tab:WaterStateExperimentalParameterTable}	
+		\label{tab:WaterStateExperimentalParameterTable}
 		\begin{tabular}{l|c|r}
 			\hline
-			\textbf{\makecell{Load current(A) / \\currency density($A·cm^{-2}$)}}   & \textbf{Working temperature($^{\circ}C$)} & \textbf{Air metering ratio} \\
+			\textbf{\makecell{Load current(A) /          \\currency density($A·cm^{-2}$)}}   & \textbf{Working temperature($^{\circ}C$)} & \textbf{Air metering ratio} \\
 			\hline
-			120/0.4                                         & 55,60,65,70,73                 & 2,2.2,2.4,2.6,2.8           \\
-			210/0.7                                         & 55,60,65,70,73                 & 1.8,2,2.2,2.4               \\
-			300/1.0                                         & 63,65,68,70,73                 & 1.8,2,2.2,2.4               \\
+			120/0.4 & 55,60,65,70,73 & 2,2.2,2.4,2.6,2.8 \\
+			210/0.7 & 55,60,65,70,73 & 1.8,2,2.2,2.4     \\
+			300/1.0 & 63,65,68,70,73 & 1.8,2,2.2,2.4     \\
 			\hline
 		\end{tabular}
 	\end{center}
-	
+
 \end{table}
 
 Literatures\cite{wuDiagnosticToolsPEM2008} indicates that the time required for the fuel cell system to reach water balance is generally a few seconds to ten minutes. Therefore, each test point ran for 20 minutes, and it was assumed that the fuel cell was in the process of establishing water balance within the first 15 minutes, and no data was recorded for this process, and the data obtained in the last 5 minutes was recorded. During the test, if a single cell voltage is too low or other faults cause the fuel cell system to shut down, the data of this operating point will be removed.
@@ -41,7 +41,7 @@ The high-power fuel cell system used in this article is shown in Fig \ref{fig:Po
 % 本文采用的大功率燃料电池系统如图 2 所示，由 AT&M 环境工程技术有限公司生产。该燃料电池系统的额定净输出功率为 100kW，电堆由 410 块单电池组成。高压干燥氢气经电磁阀和比例阀减压后进入反应堆阳极。残余氢气中的液态水被气水分离装置分离，并通过排水阀间歇排放。
 \begin{figure}[h]
 	\centering
-	
+
 	\includegraphics[scale=0.4]{Research_pictures/picture2.png}
 	\caption[short]{power system diagram}
 	\label{fig:PowerSystemDiagram}
@@ -66,7 +66,7 @@ Taking the fuel cell system during steady-state operation as the research object
 \begin{equation}\label{changeInWaterContent}
 	\frac{d m_{w,s t k}}{d t}=\frac{d m_{w,s y s}}{d t}
 \end{equation}
-Each part of the equation can be calculated by:
+Each part of the equation required for the water balance model is described below:
 \subsection*{Water flow into the system}
 Since the hydrogen entering the system is high-pressure hydrogen with a purity of 99.99\%, water vapor mainly enters the system with the air. By recording the temperature, humidity, pressure of the environment during the reaction process, and the air flow entering the system, the water flow entering the system can be calculated.
 % 由于进入系统的氢气是纯度为 99.99% 的高压氢气，因此水蒸气主要随空气进入系统。通过记录反应过程中环境的温度、湿度、压力以及进入系统的空气流量，可以计算出进入系统的水流量。
@@ -104,7 +104,7 @@ To measure the water flow out of the system from the air and hydrogen sides, thi
 % 为了测量从空气侧和氢气侧流出系统的水流量，本文设计了一种以冷凝为核心的排气含水量检测装置。
 \begin{figure}
 	\centering
-	
+
 	\includegraphics[scale=0.6]{Research_pictures/picture3.png}
 	\caption[short]{Schematic diagram of exhaust gas water content detection device}
 	\label{fig:water_detection_device_diagram}
