--- a/Research_on_water_status_Chapters/Chapter4_Conclusion.tex
+++ b/Research_on_water_status_Chapters/Chapter4_Conclusion.tex
@@ -2,8 +2,14 @@
 Different conditions and the absolute value of the water content inside the fuel cell system.
 \par
 This study investigates the water content state of the high-power fuel cell system and constructs a water balance model. Initially, to authenticate this model, a tail gas water content detection apparatus centered on condensation was designed and established, based on the original high-power fuel cell system. Subsequently, control variable experiments involving three factors, namely, working temperature, air metering ratio, and load current, were executed to measure the water flow rate emanating from the air side and hydrogen side of the fuel cell system during steady-state operation. The experimental outcomes are as follows:
+% 本研究调查了高功率燃料电池系统的含水状态并构建了水平衡模型。 最初，为了验证该模型，在原有大功率燃料电池系统的基础上，设计并建立了以冷凝为核心的尾气含水量检测装置。 随后，进行了涉及工作温度、空气计量比和负载电流三个因素的控制变量实验，测量了稳态运行期间燃料电池系统空气侧和氢气侧排出的水流量。 实验结果如下：
 \begin{description}
-    \item [1] Under larger air metering ratios, elevated coolant inlet temperatures, and higher load currents, the water content in the exhaust gas on the air side is higher; conversely, under smaller air metering ratios, lower coolant inlet temperatures, and higher load currents, the water content in the exhaust gas on the hydrogen side is higher.
-    \item [2] Under the same load current, as the working temperature and air metering ratio escalate, the rate of change of the water content inside the fuel cell system progressively decreases. However, the degree of influence of working temperature and air metering ratio on the rate of change of the water content inside the fuel cell system slightly varies. When the load current is 120A and 210A, the influence of working temperature is more pronounced; whereas, when the load current is 300A, the influence of the air metering ratio is more evident.
-    \item [3] With the amplification of load current, the rate of change of the water content inside the fuel cell system somewhat increases, but the increase is not substantial. Simultaneously, the range of the rate of change of the internal water content at 210A is greater than that at 120A and 300A, and the corresponding fuel cell system cannot operate stably under the conditions of 210A/55$^{\circ}C$/1.6 and 210A/55$^{\circ}C$/1.8. This further substantiates the correlation between the rate of change of the internal water content of the fuel cell system and the water content fault.
+	\item [1] Under larger air metering ratios, elevated coolant inlet temperatures, and higher load currents, the water content in the exhaust gas on the air side is higher; conversely, under smaller air metering ratios, lower coolant inlet temperatures, and higher load currents, the water content in the exhaust gas on the hydrogen side is higher.
+	      % 在较大的空气计量比、较高的冷却剂入口温度和较高的负载电流下，空气侧废气中的含水量较高； 反之，在较小的空气计量比、较低的冷却剂入口温度和较高的负载电流下，氢气侧废气中的含水量较高。 
+	\item [2] Under the same load current, as the working temperature and air metering ratio escalate, the rate of change of the water content inside the fuel cell system progressively decreases. However, the degree of influence of working temperature and air metering ratio on the rate of change of the water content inside the fuel cell system slightly varies. When the load current is 120A and 210A, the influence of working temperature is more pronounced; whereas, when the load current is 300A, the influence of the air metering ratio is more evident.
+	      % 在相同负载电流下，随着工作温度和空气计量比的升高，燃料电池系统内部含水量的变化率逐渐减小。 但工作温度和空气计量比对燃料电池系统内部含水量变化率的影响程度略有不同。 当负载电流为120A和210A时，工作温度的影响更为明显； 而当负载电流为300A时，空气计量比的影响更为明显。
+	\item [3] With the amplification of load current, the rate of change of the water content inside the fuel cell system somewhat increases, but the increase is not substantial. Simultaneously, the range of the rate of change of the internal water content at 210A is greater than that at 120A and 300A, and the corresponding fuel cell system cannot operate stably under the conditions of 210A/55$^{\circ}C$/1.6 and 210A/55$^{\circ}C$/1.8. This further substantiates the correlation between the rate of change of the internal water content of the fuel cell system and the water content fault.
+	      % 随着负载电流的放大，燃料电池系统内部含水量的变化率有所增加，但增加幅度并不大。 同时，210A时内部含水量的变化率范围大于120A和300A时，相应的燃料电池系统无法在210A/55$^{\circ}C$/条件下稳定运行。 1.6 和 210A/55$^{\circ}C$/1.8。 这进一步证实了燃料电池系统内部含水量的变化率与含水量故障之间的相关性。
 \end{description}
+
+In conclusion, the water balance model can effectively predict the water content inside the fuel cell system. The experimental results provide a reference for the water content detection of high-power fuel cell systems. The water content status of the fuel cell system can be detected by monitoring the tail gas water volume. The results of this study can provide a theoretical basis for the water content detection of high-power fuel cell systems and can be used as a reference for the operation and maintenance of high-power fuel cell systems.
