--- a/Research_on_water_status_Chapters/ref.bib
+++ b/Research_on_water_status_Chapters/ref.bib
@@ -466,3 +466,73 @@
   keywords = {Alkaline fuel cell,Cogeneration,Heat management,Model,Performance,Water management},
   file = {C:\Users\Yiyu\Zotero\storage\B7A2KBBA\Verhaert et al_2011_Water management in an alkaline fuel cell.pdf}
 }
+
+@incollection{altman2013predicting,
+  title={Predicting financial distress of companies: revisiting the Z-score and ZETA{\textregistered} models},
+  author={Altman, Edward I},
+  booktitle={Handbook of research methods and applications in empirical finance},
+  pages={428--456},
+  year={2013},
+  publisher={Edward Elgar Publishing}
+}
+
+@inproceedings{camska2013predicting,
+  title={Predicting financial distress of companies in the agricultural sector.},
+  author={Camska, Dagmar},
+  booktitle={Economic Science for Rural Development Conference Proceedings},
+  number={30},
+  year={2013}
+}
+
+@article{jiReviewWaterManagement2009,
+  title = {A {{Review}} of {{Water Management}} in {{Polymer Electrolyte Membrane Fuel Cells}}},
+  author = {Ji, Mengbo and Wei, Zidong},
+  date = {2009-12},
+  journaltitle = {Energies},
+  volume = {2},
+  number = {4},
+  pages = {1057--1106},
+  publisher = {Molecular Diversity Preservation International},
+  issn = {1996-1073},
+  doi = {10.3390/en20401057},
+  url = {https://www.mdpi.com/1996-1073/2/4/1057},
+  urldate = {2024-03-12},
+  abstract = {At present, despite the great advances in polymer electrolyte membrane fuel cell (PEMFC) technology over the past two decades through intensive research and development activities, their large-scale commercialization is still hampered by their higher materials cost and lower reliability and durability. In this review, water management is given special consideration. Water management is of vital importance to achieve maximum performance and durability from PEMFCs. On the one hand, to maintain good proton conductivity, the relative humidity of inlet gases is typically held at a large value to ensure that the membrane remains fully hydrated. On the other hand, the pores of the catalyst layer (CL) and the gas diffusion layer (GDL) are frequently flooded by excessive liquid water, resulting in a higher mass transport resistance. Thus, a subtle equilibrium has to be maintained between membrane drying and liquid water flooding to prevent fuel cell degradation and guarantee a high performance level, which is the essential problem of water management. This paper presents a comprehensive review of the state-of-the-art studies of water management, including the experimental methods and modeling and simulation for the characterization of water management and the water management strategies. As one important aspect of water management, water flooding has been extensively studied during the last two decades. Herein, the causes, detection, effects on cell performance and mitigation strategies of water flooding are overviewed in detail. In the end of the paper the emphasis is given to: (i) the delicate equilibrium of membrane drying vs. water flooding in water management; (ii) determining which phenomenon is principally responsible for the deterioration of the PEMFC performance, the flooding of the porous electrode or the gas channels in the bipolar plate, and (iii) what measures should be taken to prevent water flooding from happening in PEMFCs.},
+  issue = {4},
+  langid = {english},
+  keywords = {catalyst layer(CL),flow channel,membrane drying,polymer electrolyte membrane fuel cells (PEMFCs),water flooding,water management},
+  file = {C:\Users\Yiyu\Zotero\storage\PAVBKC3V\Ji_Wei_2009_A Review of Water Management in Polymer Electrolyte Membrane Fuel Cells.pdf}
+}
+
+@article{shojayianSimulationCathodeCatalyst2024,
+  title = {Simulation of Cathode Catalyst Durability under Fuel Cell Vehicle Operation –{{Effects}} of Stack Size and Temperature},
+  author = {Shojayian, Mohammad and Kjeang, Erik},
+  date = {2024-01-30},
+  journaltitle = {Journal of Power Sources},
+  volume = {591},
+  pages = {233820},
+  issn = {0378-7753},
+  doi = {10.1016/j.jpowsour.2023.233820},
+  url = {https://www.sciencedirect.com/science/article/pii/S0378775323011965},
+  urldate = {2024-03-14},
+  abstract = {In this work, a fundamental cathode catalyst degradation model is developed in order to simulate fuel cell stack durability under realistic vehicle operation. A dynamic platinum degradation model featuring platinum dissolution and redeposition is developed to account for the Ostwald ripening phenomenon. The model is then calibrated for a variety of accelerated stress test data with different upper and lower potential limits and temperatures. Next, a case study of fuel cell transit bus operation in the city of Victoria, B.C., Canada is carried out to investigate the effects of stack size and temperature on the cathode catalyst durability. To this end, the required power density and cell voltage are calculated from the drive cycle considering vehicle dynamics and specifications. Larger stacks are found to experience higher upper potential limits; thus, showing lower lifetimes. The cathode lifetime is predicted to grow 379\% at 80°C if the stack nominal power is lowered from 396 to 132~kW while the performance requirement is met. The temperature is also shown to have a tremendous impact on the cathode lifetime. A temperature drop from 80 to 60°C results in 154\% cathode lifetime enhancement for a stack nominal power of 264~kW.},
+  keywords = {Catalyst,Durability,Fuel cell,Fuel cell transit bus,Ostwald ripening,Platinum degradation},
+  file = {C:\Users\Yiyu\Zotero\storage\YDV3IXBW\Shojayian_Kjeang_2024_Simulation of cathode catalyst durability under fuel cell vehicle operation.pdf}
+}
+
+@article{bonnetDesign80kWePEM2008,
+  title = {Design of an {{80kWe PEM}} Fuel Cell System: {{Scale}} up Effect Investigation},
+  shorttitle = {Design of an {{80kWe PEM}} Fuel Cell System},
+  author = {Bonnet, C. and Didierjean, S. and Guillet, N. and Besse, S. and Colinart, T. and Carré, P.},
+  date = {2008-08},
+  journaltitle = {Journal of Power Sources},
+  volume = {182},
+  number = {2},
+  pages = {441--448},
+  issn = {03787753},
+  doi = {10.1016/j.jpowsour.2007.12.100},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S0378775307028674},
+  urldate = {2024-03-14},
+  langid = {english},
+  file = {C:\Users\Yiyu\Zotero\storage\VEM56HHX\Bonnet et al_2008_Design of an 80kWe PEM fuel cell system.pdf}
+}
