--- a/Research_on_water_status_Chapters/Chapter1_Introduction.tex
+++ b/Research_on_water_status_Chapters/Chapter1_Introduction.tex
@@ -7,6 +7,10 @@ Their versatility allows them to function not only as a small-scale distributed 
 % 它们的多功能性使它们不仅可以作为小型分布式电源，还可以作为大功率运输系统的能源，从而展示了其广泛的适用性\cite{sharafOverviewFuelCell2014}。
 Nevertheless, the reliability, stability, and durability of the fuel cell stack, as the central component of the fuel cell power system, have emerged as critical factors influencing the extensive commercialization of fuel cell products.
 % 然而，燃料电池电堆作为燃料电池动力系统的核心部件，其可靠性、稳定性和耐用性已成为影响燃料电池产品广泛商业化的关键因素。
+% TODO: 尽可能去掉精确的数字表达。讲 水很重要，干燥会造成什么样的影响。缺水会导致什么样的损伤。
+% TODO: 浓缩含水检测的方法
+% TODO: 把含水状态检测方法的部分分别讲一下优缺点
+% TODO: 基于阻抗的和基于含水量的方法之间有什么区别
 During the operational phase of the fuel cell, it is imperative to maintain the internal proton exchange membrane (PEM) in an optimal state of hydration to ensure the proton conduction ability remains at its peak, thereby achieving efficient and stable output performance of the fuel cell. Hydration state failure is the most prevalent failure mode of fuel cells, accounting for approximately 52 of total failures, primarily manifested as drying and flooding. Short-term hydration state failure can induce fluctuations and reductions in the output performance of the fuel cell. If this condition persists, it may lead to irreversible attenuation.
 % 在燃料电池运行阶段，必须保持内部质子交换膜（PEM）处于最佳水合状态，以保证质子传导能力保持在峰值，从而实现燃料电池高效稳定的输出性能。水合状态失效是燃料电池最常见的失效模式，约占总失效的 52 例，主要表现为干燥和水淹。短期水合状态失效会引起燃料电池输出性能的波动和降低。如果这种情况持续存在，可能会导致不可逆的衰减。
 \par
